# mlflow-operator

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  PROJECT  README.md  go.mod  go.sum
api/: go.mod  (+1 more)
mlflow-tests/: README.md  pyproject.toml
mlflow-tests/images/: Dockerfile.konflux  README.md  collect-debug-logs.sh  patch-csv.sh  test-run.sh  test.Dockerfile
mlflow-tests/src/mlflow_tests/enums/: __init__.py  resource_type.py  user_role.py
mlflow-tests/src/mlflow_tests/manager/: rbac.py  service_account.py  user.py
mlflow-tests/src/mlflow_tests/managers/: __init__.py  base.py
mlflow-tests/src/mlflow_tests/utils/: client.py
mlflow-tests/tests/: base.py  conftest.py  mark_expression_utils.py  test_artifacts.py  test_conftest_upgrade_selection.py  test_experiments.py  test_models.py  test_upgrade_actions.py  test_upgrade_utils.py  test_upgrade_validations.py  test_workspaces.py  upgrade_phase_base.py  upgrade_utils.py
mlflow-tests/tests/actions/: __init__.py  artifact_actions.py  experiment_actions.py  model_actions.py  upgrade_actions.py  workspace_actions.py
mlflow-tests/tests/constants/: config.py
mlflow-tests/tests/post_upgrade/: test_3_10.py
mlflow-tests/tests/pre_upgrade/: test_3_10.py
mlflow-tests/tests/shared/: __init__.py  test_context.py  test_data.py  upgrade_state_3_10.py  user_info.py
mlflow-tests/tests/upgrade/: actions.py  test_actions.py
mlflow-tests/tests/validations/: __init__.py  artifact_validations.py  experiment_validations.py  model_validations.py  upgrade_validations.py  validation_utils.py
(+115 files in other folders)
